# varisat

./: .cirrus.yml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  bors.toml
.circleci/: config.yml  publish_dev_docs.sh  publish_gh_pages.sh  save_binaries.py  setup_git.sh  tag_release.sh
dev/: aliases.js  search-index.js  settings.html  source-files.js
dev/implementors/failure/: trait.Fail.js
dev/implementors/partial_ref/: trait.HasPart.js  trait.IntoPartialRef.js  trait.Part.js  trait.PartSpec.js  trait.PartialRefTarget.js  trait.SplitIntoParts.js
dev/implementors/varisat/: trait.ExtendFormula.js
dev/src/varisat/: analyze_conflict.rs.html  assumptions.rs.html  binary.rs.html  cdcl.rs.html  clause.rs.html  config.rs.html  context.rs.html  decision.rs.html  glue.rs.html  lib.rs.html  load.rs.html  model.rs.html  proof.rs.html  prop.rs.html  schedule.rs.html  solver.rs.html  state.rs.html  tmp.rs.html  unit_simplify.rs.html  variables.rs.html
dev/src/varisat_checker/: clauses.rs.html  context.rs.html  hash.rs.html  internal.rs.html  lib.rs.html  processing.rs.html  rup.rs.html  sorted_lits.rs.html  state.rs.html  tmp.rs.html  transcript.rs.html  variables.rs.html
dev/src/varisat_dimacs/: lib.rs.html
dev/src/varisat_formula/: cnf.rs.html  lib.rs.html  lit.rs.html  test.rs.html
dev/src/varisat_internal_macros/: lib.rs.html
dev/src/varisat_internal_proof/: binary_format.rs.html  lib.rs.html  vli_enc.rs.html
dev/src/varisat_lrat/: lib.rs.html
dev/varisat/: all.html  enum.ProofFormat.html  index.html  macro.cnf!.html  macro.cnf.html  macro.lit!.html  macro.lit.html  sidebar-items.js  struct.CnfFormula.html  struct.Lit.html  struct.Var.html  trait.ExtendFormula.html
dev/varisat/analyze_conflict/: fn.add_literal.html  fn.analyze_conflict.html  fn.minimize_clause.html  index.html  sidebar-items.js  struct.AnalyzeConflict.html  struct.LevelAbstraction.html
dev/varisat/assumptions/: enum.EnqueueAssumption.html  fn.analyze_assumption_conflict.html  fn.enqueue_assumption.html  fn.set_assumptions.html  index.html  sidebar-items.js  struct.Assumptions.html
dev/varisat/binary/: fn.simplify_binary.html  index.html  sidebar-items.js  struct.BinaryClauses.html
dev/varisat/cdcl/: enum.FoundConflict.html  fn.conflict_step.html  fn.find_conflict.html  index.html  sidebar-items.js
dev/varisat/checker/: enum.CheckedProofStep.html  enum.CheckerError.html  enum.ProofTranscriptStep.html  index.html  sidebar-items.js  struct.Checker.html  struct.CheckerData.html  trait.ProofProcessor.html  trait.ProofTranscriptProcessor.html
dev/varisat_checker/: all.html  constant._DERIVE_failure_Fail_FOR_CheckerError.html  constant._DERIVE_failure_core_fmt_Display_FOR_CheckerError.html  enum.CheckedProofStep.html  enum.CheckedSamplingMode.html  enum.CheckerError.html  enum.ProofTranscriptStep.html  index.html  sidebar-items.js  struct.CheckedUserVar.html  struct.Checker.html  struct.CheckerData.html  struct.ResolutionPropagations.html  trait.ProofProcessor.html  trait.ProofTranscriptProcessor.html
dev/varisat_dimacs/: all.html  constant._DERIVE_failure_Fail_FOR_ParserError.html  constant._DERIVE_failure_core_fmt_Display_FOR_ParserError.html  enum.ParserError.html  fn.write_dimacs.html  fn.write_dimacs_clauses.html  fn.write_dimacs_header.html  index.html  sidebar-items.js  struct.DimacsHeader.html  struct.DimacsParser.html
dev/varisat_formula/: all.html  index.html  macro.cnf.html  macro.cnf_formula!.html  macro.cnf_formula.html  macro.lit.html  macro.lits!.html  macro.lits.html  macro.var.html  macro.vars!.html  macro.vars.html  sidebar-items.js
dev/varisat_internal_macros/: all.html  derive.ConfigUpdate.html  derive.DocDefault.html  fn.derive_config_update.html  fn.derive_doc_default.html  fn.doc_from_attrs.html  fn.get_doc_field.html  index.html  sidebar-items.js
dev/varisat_internal_proof/: all.html  enum.DeleteClauseProof.html  enum.ProofStep.html  fn.clause_hash.html  fn.lit_code_hash.html  fn.lit_hash.html  index.html  sidebar-items.js  type.ClauseHash.html
dev/varisat_lrat/: all.html  index.html  sidebar-items.js  struct.WriteLrat.html
manual/: book.toml
manual/0.2.0/: index.html  print.html  searchindex.js  searchindex.json
manual/0.2.1/: searchindex.js  searchindex.json
manual/master/: index.html  print.html
manual/src/: README.md  SUMMARY.md
varisat/: Cargo.toml  README.md  build.rs
varisat-checker/: Cargo.toml  README.md
varisat-checker/src/: clauses.rs  context.rs  hash.rs  internal.rs  lib.rs  processing.rs  rup.rs  sorted_lits.rs  state.rs  tmp.rs  transcript.rs  variables.rs
varisat-cli/: Cargo.toml  README.md  build.rs
varisat-cli/src/: check.rs  main.rs
varisat-cli/src/check/: transcript.rs
varisat-dimacs/: Cargo.toml  LICENSE-MIT  README.md
varisat-dimacs/src/: lib.rs
varisat-formula/: Cargo.toml  README.md
varisat-formula/src/: cnf.rs  lib.rs  lit.rs  test.rs
varisat-internal-macros/: Cargo.toml  README.md
varisat-internal-macros/src/: lib.rs
varisat-internal-proof/: Cargo.toml  README.md
varisat-internal-proof/src/: binary_format.rs  lib.rs  vli_enc.rs
varisat-lrat/: Cargo.toml  README.md  build.rs
varisat-lrat/src/: lib.rs
varisat-macros/: Cargo.toml
varisat-macros/src/: lib.rs
varisat/proptest-regressions/: solver.txt
varisat/src/: analyze_conflict.rs  assumptions.rs  binary.rs  cdcl.rs  checker.rs  clause.rs  cnf.rs  config.rs  context.rs  decision.rs  dimacs.rs  glue.rs  incremental.rs  lib.rs  lit.rs  load.rs  model.rs  proof.rs  prop.rs  schedule.rs  simplify.rs  solver.rs  state.rs  test.rs  tmp.rs  unit_simplify.rs  variables.rs  vec_mut_scan.rs
varisat/src/checker/: write_lrat.rs
varisat/src/clause/: activity.rs  alloc.rs  assess.rs  db.rs  gc.rs  header.rs  reduce.rs
varisat/src/decision/: vsids.rs
varisat/src/proof/: drat.rs  map_step.rs  varisat.rs
varisat/src/prop/: assignment.rs  binary.rs  graph.rs  long.rs  watch.rs
varisat/src/schedule/: luby.rs
varisat/src/test/: io.rs
varisat/src/variables/: data.rs  var_map.rs
varisat/tests/: checker.rs  cnfs.rs
(+451 files in other folders)
