[workspace]
# the order here must match the topological ordering of internal dependencies
members = [
    "varisat-internal-macros",
    "varisat-formula",
    "varisat-dimacs",
    "varisat",
    "varisat-cli",
]

[profile.dev]
opt-level = 1

[profile.test]
opt-level = 1

[profile.release]
debug = true # Enables profiling

[profile.bench]
debug = true # Enables profiling
