[package]
name = "varisat-checker"
version = "0.2.2"
authors = ["Jannis Harder <me@jix.one>"]
edition = "2018"
description = "Proof checker for proofs generate by the Varisat SAT solver"
homepage = "https://jix.one/project/varisat/"
repository = "https://github.com/jix/varisat"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
smallvec = "1.4.2"
log = "0.4.6"
partial_ref = "0.3.1"
rustc-hash = "1.1.0"
anyhow = "1.0.32"
thiserror = "1.0.20"

    [dependencies.varisat-formula]
    path = "../varisat-formula"
    version = "=0.2.2"

    [dependencies.varisat-dimacs]
    path = "../varisat-dimacs"
    version = "=0.2.2"

    [dependencies.varisat-internal-proof]
    path = "../varisat-internal-proof"
    version = "=0.2.2"

[dev-dependencies]
proptest = "0.10.1"

    [dev-dependencies.varisat-formula]
    path = "../varisat-formula"
    version = "=0.2.2"
    features = ["internal-testing"]
