[package]
name = "varisat-cli"
version = "0.2.0"
authors = ["Jannis Harder <me@jix.one>"]
build = "build.rs"
edition = "2018"
autobins = false

[dependencies]
varisat = { path = "../varisat", version = "0.2.0" }

clap = { version = "2.32.0", features = ["wrap_help"] }
env_logger = "0.6.1"
failure = "0.1.3"
log = "0.4.6"

[[bin]]
name = "varisat"
path = "src/main.rs"
