[package]
name = "varisat-cli"
description = "A CDCL based SAT solver (command line solver)"
homepage = "https://jix.one/project/varisat/"
repository = "https://github.com/jix/varisat"
version = "0.2.0"
authors = ["Jannis Harder <me@jix.one>"]
license = "MIT/Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2018"
autobins = false

[dependencies]
varisat = { path = "../varisat", version = "0.2.0" }

clap = { version = "2.33.0", features = ["wrap_help"] }
env_logger = "0.6.1"
failure = "0.1.5"
log = "0.4.6"

[[bin]]
name = "varisat"
path = "src/main.rs"
