[package]
name = "varisat-dimacs"
version = "0.2.1"
authors = ["Jannis Harder <me@jix.one>"]
edition = "2018"
description = "DIMCAS CNF parser and writer for the Varisat SAT solver"
homepage = "https://jix.one/project/varisat/"
repository = "https://github.com/jix/varisat"
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
failure = "0.1.5"
itoa = "0.4.4"
    [dependencies.varisat-formula]
    path = "../varisat-formula"
    version = "=0.2.1"

[dev-dependencies]
proptest = "0.9.4"
rand = "0.6.5"
tempfile = "3.1.0"
env_logger = "0.6.1"

    [dev-dependencies.varisat-formula]
    path = "../varisat-formula"
    version = "=0.2.1"
    features = ["proptest-strategies", "internal-testing"]
