[package]
name = "varisat-internal-macros"
version = "0.2.1"
authors = ["Jannis Harder <me@jix.one>"]
edition = "2018"
description = "Internal macros for the Varisat SAT solver"
homepage = "https://jix.one/project/varisat/"
repository = "https://github.com/jix/varisat"
license = "MIT/Apache-2.0"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
synstructure = "0.10.2"
proc-macro2 = "0.4.30"
syn = "1.0.14"
quote = "0.6.12"
regex = "1.1.7"
