[package]
name = "varisat-internal-macros"
version = "0.2.1"
authors = ["Jannis Harder <me@jix.one>"]
edition = "2018"
description = "Internal macros for the Varisat SAT solver"
homepage = "https://jix.one/project/varisat/"
repository = "https://github.com/jix/varisat"
license = "MIT/Apache-2.0"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
synstructure = "0.12.4"
proc-macro2 = "1.0.20"
syn = "1.0.40"
quote = "1.0.7"
regex = "1.1.6"
