[package]
name = "varisat-lrat"
version = "0.2.1"
authors = ["Jannis Harder <me@jix.one>"]
edition = "2018"
description = "LRAT proof generation for the Varisat SAT solver"
homepage = "https://jix.one/project/varisat/"
repository = "https://github.com/jix/varisat"
license = "MIT/Apache-2.0"
readme = "README.md"
build = "build.rs"

[dependencies]
failure = "0.1.5"
leb128 = "0.2.4"
itoa = "0.4.4"

    [dependencies.varisat-formula]
    path = "../varisat-formula"
    version = "=0.2.1"

    [dependencies.varisat-checker]
    path = "../varisat-checker"
    version = "=0.2.1"


[dev-dependencies]
proptest = "0.10.1"
tempfile = "3.0.8"

    [dev-dependencies.varisat]
    path = "../varisat"
    version = "=0.2.1"

    [dev-dependencies.varisat-formula]
    path = "../varisat-formula"
    version = "=0.2.1"
    features = ["proptest-strategies", "internal-testing"]

[build-dependencies]
failure = "0.1.5"
