[package]
name = "varisat"
description = "A CDCL based SAT solver (library)"
homepage = "https://jix.one/project/varisat/"
repository = "https://github.com/jix/varisat"
version = "0.2.0"
authors = ["Jannis Harder <me@jix.one>"]
license = "MIT/Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2018"


[dependencies]
failure = "0.1.5"
itoa = "0.4.4"
log = "0.4.6"
ordered-float = "1.0.2"
partial_ref = "0.3.1"
serde = { version = "1.0.91", features = ["derive"] }
leb128 = "0.2.3"
hashbrown = "0.3.0"
smallvec = "0.6.9"
vec_mut_scan = "0.1.0"

    [dependencies.varisat-internal-macros]
    path = "../varisat-internal-macros"
    version = "=0.2.0"

    [dependencies.varisat-formula]
    path = "../varisat-formula"
    version = "=0.2.0"

    [dependencies.varisat-dimacs]
    path = "../varisat-dimacs"
    version = "=0.2.0"

    [dependencies.varisat-internal-proof]
    path = "../varisat-internal-proof"
    version = "=0.2.0"

[dev-dependencies]
proptest = "0.9.3"
rand = "0.6.5"
tempfile = "3.0.7"
env_logger = "0.6.1"

    [dev-dependencies.varisat-formula]
    path = "../varisat-formula"
    version = "=0.2.0"
    features = ["proptest-strategies", "internal-test-macros"]

[build-dependencies]
failure = "0.1.5"
