[package]
name = "varisat"
description = "A CDCL based SAT solver (library)"
homepage = "https://jix.one/project/varisat/"
repository = "https://github.com/jix/varisat"
version = "0.2.2"
authors = ["Jannis Harder <me@jix.one>"]
license = "MIT/Apache-2.0"
readme = "README.md"
build = "build.rs"
edition = "2018"


[dependencies]
itoa = "0.4.4"
log = "0.4.6"
ordered-float = "2.0.0"
partial_ref = "0.3.1"
serde = { version = "1.0.91", features = ["derive"] }
leb128 = "0.2.4"
vec_mut_scan = "0.3.0"
rustc-hash = "1.1.0"
anyhow = "1.0.32"
thiserror = "1.0.20"

    [dependencies.varisat-internal-macros]
    path = "../varisat-internal-macros"
    version = "=0.2.2"

    [dependencies.varisat-formula]
    path = "../varisat-formula"
    version = "=0.2.2"

    [dependencies.varisat-dimacs]
    path = "../varisat-dimacs"
    version = "=0.2.2"

    [dependencies.varisat-internal-proof]
    path = "../varisat-internal-proof"
    version = "=0.2.2"

    [dependencies.varisat-checker]
    path = "../varisat-checker"
    version = "=0.2.2"

[dev-dependencies]
proptest = "0.10.1"
rand = "0.7.3"
tempfile = "3.0.8"
env_logger = "0.7.1"

    [dev-dependencies.varisat-formula]
    path = "../varisat-formula"
    version = "=0.2.2"
    features = ["proptest-strategies", "internal-testing"]

[build-dependencies]
anyhow = "1.0.32"

